# superwhisper-api

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/skills/macwhisper-dictionary/: SKILL.md
archive/: README.md
archive/direct-eleven/: README.md  extract-key.py
archive/gui-batch/: cli.py  core.py  models.py  workers.py
archive/gui-orchestration/scripts/: recycle-superwhisper-run.zsh  stop-superwhisper-run.zsh  watch-superwhisper-apps.zsh
archive/gui-orchestration/src/: cli.py  superwhisper.py  workers.py
direct-eleven/: README.md  _key.py  test-paths.txt  transcribe-output.py  transcribe.py
direct-superwhisper/: README.md  check-models.py  client.py  run-prompt.py
docs/: tajik-normalization.md
launchd/: com.simon.superwhisper-api.macwhisper-proxy.plist  com.simon.superwhisperer.app-watchdog.plist
scripts/: recycle-superwhisper-run.zsh  stop-superwhisper-run.zsh  watch-superwhisper-apps.zsh
src/super_whisperer_cli/: __init__.py  cli.py  models.py  superwhisper.py  workers.py
src/superwhisper_api/: __init__.py  auth.py  batch.py  new_model_inspect.py
src/superwhisper_api/audio/: __init__.py  cli.py  models.py  transcribe.py
src/superwhisper_api/audio/projects/: __init__.py  fleurs_sqlite.py
src/superwhisper_api/audio/projects/fleurs/: __init__.py  audit.py  cli.py  db.py  ingest.py  models.py  runs.py
src/superwhisper_api/audio/projects/persian/: __init__.py  cli.py  normalizer.py
src/superwhisper_api/audio/projects/tajikistan/: __init__.py  cli.py  normalizer.py
src/superwhisper_api/macwhisper/: __init__.py  cli.py  proxy.py  replacements.py
src/superwhisper_api/text/: __init__.py  cli.py  client.py  models.py  scribe_audit.py
tests/: test_fleurs_sqlite_projects.py  test_live_audio_models.py  test_live_text_models.py  test_replacements.py
tests/fixtures/pimsleur/: french_i_unit01_0-30s.elevenlabs-diarize.json
tests/fixtures/superwhisper/1779497215/: meta.json
tests/fixtures/superwhisper/1779505994/: meta.json
tests/fixtures/superwhisper/1779570511/: meta.json
tests/fixtures/superwhisper/1779571988/: meta.json
tests/fixtures/superwhisper/1779580688/: meta.json
